# unimpressive-game-framework

./: CMakeLists.txt  README.md
cmake_modules/: FindBox2d.cmake  aa.cmake
examples/: CMakeLists.txt
examples/desktop/: main.cpp
include/UGF/: Action.h  Actor.h  ActorsFactory.h  ActorsSystem.h  Animation.h  BitmapFont.h  Config.h  Controller.h  Framecounter.h  IniFile.h  ParticleSystem.h  ResourceManager.h  Scene.h  Taggable.h  Text.h  UGF.h
include/UGF/Exeptions/: IniExeptions.h
src/UGF/: Actor.cpp  ActorsFactory.cpp  ActorsSystem.cpp  BitmapFont.cpp  BitmapFont.cpp.orig  Framecounter.cpp  IniFile.cpp  IniFile.cpp.orig  ParticleSystem.cpp  ParticleSystem.cpp.orig  ResourceManager.cpp  Taggable.cpp  Text.cpp
src/UGF/Exeptions/: IniExeptions.cpp
